Remove "about" nav and change podcast page to html layout

--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -36,6 +36,10 @@
     &:hover .project-overlay
       +position(absolute, 0px 0px null 0px)
 
+h2
+  font-size: 30px
+  letter-spacing: -1px
+
 @media (max-width: 768px)
   .project-container
     max-width: 80vw
